--- a/tienda_virtual/ofertas/templates/ofertas/index.html
+++ b/tienda_virtual/ofertas/templates/ofertas/index.html
@@ -2,29 +2,33 @@
 {% block title %} OFERTAS {% endblock %}
 {% block content %} 
 
-    <div>
+    <div style="text-align: center;">
         <h1>Bienvenidos a la sección de Ofertas</h1>
+        <p>Fecha de hoy: {{current_date|date:"d-m-Y"}}</p>
     </div>
-
-    <nav>
-        <a href="{% url 'productos:index'  %}">Ir a Productos</a>
-
-        <a href="{% url 'index' %}">Ir a la pagina Principal</a>
-    </nav>
 
     <div>
         <h3>Aquí puedes ver la lista de ofertas</h3>
+        <!--<p>¿Hay oferta especial Hoy?: {{is_special_offert|yesno:'Si,No'}}</p>
+    -->
+        {% if ofertas %}
+            <h2>Productos en Oferta!!</h2>
+            <ol>
+                {% for oferta in ofertas %}
+                    <li>{{oferta.producto.nombre}} - Precio Original: {{oferta.producto.precio}}$ - Precio Con Descuento: {{ofertas.precio_oferta}}$
+                        Descuento: {{oferta.porcentaje_descuento}}%
+                    </li>
+                {% endfor %}
+                
+            </ol>
+        {% else %}
+            <p>No hay ofertas actualmente</p>
+            
+        {% endif %}
 
-        <ul>
-            {% for oferta in ofertas %}
-                <li>{{ofertas.nombre}}</li>
-            {% empty %}
-                <li>No hay ofertas</li>
-            {% endfor %}
-        </ul>
-        
-        
     </div>
+    <br>
+    <br>
 
     <div>
         <h4>Aquí puedes navegar a las otras app o regresar al inicio</h4>
