--- a/tienda_virtual/ofertas/templates/ofertas/crear_oferta.html
+++ b/tienda_virtual/ofertas/templates/ofertas/crear_oferta.html
@@ -10,8 +10,17 @@
         <form method = "post">
             {% csrf_token %}
             {{form.as_p}}
-            <button type="submit" class="btn btn-primary">Crear Oferta</button>
+            <button type="submit" class="btn btn-secondary bg-danger">Crear Oferta</button>
         </form>
     </div>
 
+    <button class="borrar">
+        <div class="trash">
+            <div class="top">
+                <div class="paper"></div>
+            </div>
+            <span>Borrar</span> <!-- Texto del botón -->
+        </div>
+    </button>
+    
 {% endblock %}
