--- a/tienda_virtual/ofertas/templates/ofertas/eliminar_oferta.html
+++ b/tienda_virtual/ofertas/templates/ofertas/eliminar_oferta.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block title %} FORMULARIO CREAR OFERTAS  {% endblock %}
+{% block title %} FORMULARIO ELIMINAR OFERTAS  {% endblock %}
 {% block content %}
     <h1>ELIMINAR OFERTA</h1>
 
@@ -7,8 +7,8 @@
 
     <form method = "post">
         {% csrf_token %}
-            {{form.as_p}}
-                <button type="button" class="btn btn-secondary bg-danger">Eliminar</button>
+        {{form.as_p}}
+        <button type="submit" class="btn btn-secondary bg-danger">Eliminar</button>
     </form>
 
     <a href="{% url 'ofertas:index' %}">Cancelar</a>
